.provarCaches/00D410000011HE0EAM/objects/BF_Setup_VAT_Declaration__c.object
<CustomObject>
    <description>Declaration setup per Financial Company</description>
    <fields>
        <fullName>API_Type__c</fullName>
        <inlineHelpText>This field identifies the method to be used to transmit the report data generated using this Declaration Setup Template  (if any).</inlineHelpText>
        <label>API Transmission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Token__c</fullName>
        <inlineHelpText>This field holds the current active access token used in some methods of VAT Declaration Data transmission.  This token is subject to expiration.</inlineHelpText>
        <label>API Access Token – Current</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Master__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country Master</label>
        <referenceTo>rstk__sycountry__c</referenceTo>
        <relationshipLabel>BF Setup VAT Declarations</relationshipLabel>
        <relationshipName>BF_Setup_VAT_Declarations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Declaration_Period__c</fullName>
        <label>Declaration Period</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>BF Setup VAT Declarations</relationshipLabel>
        <relationshipName>BF_Setup_VAT_Declarations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Division</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Company of Financial Division must match Financial Company</errorMessage>
            <filterItems>
                <field>rstkf__gldiv__c.rstkf__gldiv_glcmp__c</field>
                <operation>equals</operation>
                <valueField>$Source.Financial_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>BF Setup VAT Declarations</relationshipLabel>
        <relationshipName>BF_Setup_VAT_Declarations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gov_Client_Device_ID__c</fullName>
        <inlineHelpText>This field is part of the fraud prevention data used in some API transmission methods.</inlineHelpText>
        <label>Government Client Device ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <inlineHelpText>This field holds the refresh token which is used by some API transmission methods to refresh expired Access Tokens.</inlineHelpText>
        <label>API Refresh Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplementary_threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Set the maximum allowed VAT amount from previous periods.
If 0, no VAT from previous periods is added. 
A supplementary declaration needs to be submitted separately.</inlineHelpText>
        <label>Supplementary threshold</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VAT_Registration_Number__c</fullName>
        <inlineHelpText>This field holds the VAT Registration Number required for some methods of API Transmission.</inlineHelpText>
        <label>VAT Registration Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_declaration_clearing_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT declaration clearing account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Company of GL account must match financial company of the VAT declaration setup AND may not be a VAT account.</errorMessage>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_cmpno__c</field>
                <operation>equals</operation>
                <valueField>$Source.Financial_Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_vatacct__c</field>
                <operation>equals</operation>
                <value>Not a VAT Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>BF Setup VAT Declarations</relationshipLabel>
        <relationshipName>BF_Setup_VAT_Declarations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VAT_declaration_variances_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL account to book the variance between the declaration and the sum of the transactions of this declaration. This variance can arise when you add a manual amount on the declaration.</description>
        <inlineHelpText>GL account to book the variance between the declaration and the sum of the transactions of this declaration. This variance can arise when you add a manual amount on the declaration.</inlineHelpText>
        <label>VAT declaration variances account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Company of GL account must match financial company of the VAT declaration setup AND may not be a VAT account.</errorMessage>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_cmpno__c</field>
                <operation>equals</operation>
                <valueField>$Source.Financial_Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_vatacct__c</field>
                <operation>equals</operation>
                <value>Not a VAT Account</value>
            </filterItems>
            <infoMessage>Company of GL account must match financial company of the VAT declaration setup AND may not be a VAT account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>BF Setup VAT Declarations (VAT declaration variances account)</relationshipLabel>
        <relationshipName>BF_Setup_VAT_Declarations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BF Setup VAT Declaration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Financial_Company__c</columns>
        <columns>VAT_Registration_Number__c</columns>
        <columns>Gov_Client_Device_ID__c</columns>
        <columns>Access_Token__c</columns>
        <columns>Refresh_Token__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>BF Setup VAT Declaration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BF Setup VAT Declarations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>